# python-project-52

./: .gitignore  Makefile  README.md  build.sh  mypy.ini  pyproject.toml
.github/workflows/: pyci.yml
task_manager/: forms.py  mixins.py  settings.py  urls.py  views.py
task_manager/fixtures/: tasks.json  test_labels.json  test_statuses.json
task_manager/labels/: forms.py  models.py  views.py
task_manager/labels/fixtures/: users.json
task_manager/labels/migrations/: 0001_initial.py  0002_rename_create_at_labels_created_at.py
task_manager/labels/tests/: test_urls.py  test_views.py  testcase.py
task_manager/labels/tests_labels/: test_forms.py  test_models.py  test_urls.py  test_views.py  testcase.py
task_manager/statuses/: forms.py  models.py  urls.py  views.py
task_manager/statuses/fixtures/: statuses.json
task_manager/statuses/migrations/: 0001_initial.py  0002_rename_create_at_statuses_created_at.py
task_manager/statuses/tests/: test_urls.py  testcase.py
task_manager/statuses/tests_statuses/: test_forms.py  test_models.py  test_urls.py  test_views.py  testcase.py
task_manager/tasks/: filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_tasks_executor_alter_tasks_label_and_more.py  0002_initial.py  0003_remove_task_label_task_labels.py  (+10 more)
task_manager/templates/: base.html  index.html
task_manager/tests/: test_forms.py  test_models.py  test_urls.py  test_views.py
task_manager/user/: forms.py  models.py  urls.py  views.py
task_manager/users/: forms.py  models.py  urls.py  views.py
(+31 files in other folders)
