[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dj-database-url>=3.0.0",
    "django>=5.2.3",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "uvicorn>=0.34.3",
    "whitenoise[brotli]>=6.9.0",
]
